<resources>
    <string name="app_name">Prochama</string>

    <string name="my_preference">"com.abc..com.MyPref"</string>
    <string name="my_preference_key">"com.abc..com.MyPrefKey"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="text_register">Don\'t have an account? Register</string>
    <string name="text_login">Already registered? Login here</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="oops">Oops!</string>
    <string name="no_internet_connection_available">No internet connection available</string>
    <string name="proceed">Proceed</string>
    <string name="deposits_content_description">Deposits</string>
    <string name="wallet_fragment">Wallet Fragment</string>


</resources>
